@@ -3,6 +3,7 @@
 ** Unreleased
 
 *** Added:
+  - Enable =company-mode= completions.
   - =ELisp= configuration file.
   - Auto-mode for =XML= and =YAML=.
   - =diff-hl= package to mark changed hunks (under =git=) on the fringe.
